# nl-to-athena-analyst

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analyst/: __init__.py  athena.py  main.py  models.py  schema_registry.py  sql_generator.py  sql_safety.py  tracing.py
samples/: loan_performance_schema.json
tests/: test_api.py  test_athena.py  test_schema_registry.py  test_sql_generator.py  test_sql_safety.py
